k8s-cluster-configuration/applications/baldcheck/base/networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: baldcheck-service
  namespace: baldcheck
spec:
  selector:
    app: baldcheck
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
