k8s-cluster-configuration/applications/baldcheck/base/networking/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: baldcheck-gateway
  namespace: baldcheck
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "baldcheck.com,www.baldcheck.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: baldcheck.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: baldcheck-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-www
      protocol: HTTPS
      port: 8443
      hostname: www.baldcheck.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: baldcheck-tls
      allowedRoutes:
        namespaces:
          from: Same
