k8s-cluster-configuration/applications/baldcheck/base/networking/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: baldcheck
  namespace: baldcheck
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: baldcheck-gateway
      namespace: baldcheck
  hostnames:
    - baldcheck.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: baldcheck-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: baldcheck-www-redirect
  namespace: baldcheck
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: baldcheck-gateway
      namespace: baldcheck
  hostnames:
    - www.baldcheck.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: baldcheck.com
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
